Sat Jun  6 15:05:47 2015  Koichi Sasada  <ko1@atdot.net>

	* class.c (ins_methods_push): Change type and name of parameters
	  to make more clear.

Sat Jun  6 08:52:13 2015  Eric Wong  <e@80x24.org>

	* test/socket/test_nonblock.rb: try to avoid EMSGSIZE
	  [ruby-core:69466]

Sat Jun  6 07:58:30 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c: remove struct mark_tbl_arg and pass objspace directly
	  to avoid indirect access overhead.

Sat Jun  6 07:08:45 2015  Eric Wong  <e@80x24.org>

	* ext/socket/ancdata.c (bsock_sendmsg_internal): drop redundant assignment

Sat Jun  6 01:00:06 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* ext/socket/ancdata.c (bsock_sendmsg_internal): all arguments are
	  parsed even on systems without HAVE_STRUCT_MSGHDR_MSG_CONTROL
	  to prevent SEGV caused by passing Qnil to RARRAY_LENINT and
	  to preserve behavior before r50776.
	  [Bug #11224] [ruby-core:69468] [Bug #11225] [ruby-core:69469]

Fri Jun  5 22:37:42 2015  Koichi Sasada  <ko1@atdot.net>

	* class.c (ins_methods_push): change 3rd parameter's type
	  from long to rb_method_visibility_t.

	* class.c (ins_methods_i): catch up this fix.

	* class.c (method_entry_i): cast to st_data_t instead of `long'.

Fri Jun  5 20:37:10 2015  Koichi Sasada  <ko1@atdot.net>

	* internal.h: move definition of rb_cref_t to method.h.

	* eval_intern.h: move definition of rb_scope_visibility_t
	  to method.h.

	* method.h: change rb_cref_t::scope_visi from VALUE to
	  rb_scope_visibility_t.
	  [Bug #11219]

	* vm.c (vm_cref_new): accept rb_method_visibility_t directly.

	* vm_insnhelper.c (rb_vm_rewrite_cref): don't use 0,
	  but METHOD_VISI_UNDEF.

	* vm_method.c (rb_scope_visibility_set): don't need to use cast.

	* vm_method.c (rb_scope_module_func_set): ditto.

Fri Jun  5 17:27:30 2015  Eric Wong  <e@80x24.org>

	* ext/socket/ancdata.c (bsock_sendmsg_internal): avoid msg_control
	  ptr if msg_controllen is zero to fix portability problems.

Fri Jun  5 09:17:45 2015  Eric Wong  <e@80x24.org>
